исправить тесты в Postman